--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It's for learning front-end built on React",
   "scripts": {
     "start": "webpack-dev-server --hot --colors --open",
-    "build": "NODE_ENV=production webpack -p --progress",
+    "build": "webpack -p --progress",
     "test": "npm run lint",
     "lint": "eslint ."
   },
