Fix eslint error for chain indentions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "react"
   ],
   "rules": {
+    "indent": ["error", 2, { "MemberExpression": 0 }],
     "no-unused-vars": "warn",
     "react/prop-types": "warn"
   }
