--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  local_dir: ./public
+  local_dir: public
   on:
     branch: master
